# fwupd

./: .travis.yml  meson.build  meson_options.txt
contrib/ci/: debian_s390x.sh  ubuntu.sh
contrib/snap/: snapcraft-master.yaml
data/: meson.build
data/fwupdtool-udev/: 91-fwupdtool.rules  fwupdtool.service.in  meson.build
snap/: snapcraft.yaml
src/: fu-common-cab.c  fu-self-test.c
